dark mode fix

--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
+:root { 
+    --bg-image: url("assets/light-image.jpg");
+    --font-color: #222;
+    --title-color: #0067e6;
+    --title-background: #fff;
+    --main-border: 1px solid rgba(255, 255, 255, 0.4);
+    --main-bg: rgba(255, 255, 255, 0.4);
+  }
+  
+  [data-theme="dark"] {
+    --bg-image: url("assets/dark-image.jpg");
+    --font-color: #efefef;
+    --title-color: #fec150;
+    --title-background: #222;
+    --main-border: 1px solid rgba(255, 255, 255, 0.2);
+    --main-bg: rgba(25, 25, 25, 0.4);
+  }
+  
 *, *::before, *::after {
     box-sizing: border-box;
     font-family: Gotham Rounded, sans-serif;
     font-weight: normal;
   }
-
- /* body {
-    padding: 0px;
-    margin: 0;
-    background: linear-gradient(180deg, #17ee17e1, #1d71df);
-    color: black;
-  }*/
-
 
 .calculator-grid {
     display: grid;
@@ -24,18 +34,16 @@
   }  
 
 .calculator-grid > button {
-    color:aliceblue;
+    color:var(--font-color);
     cursor: pointer;
     font-size: 2rem;
     outline: none;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--bg-color);
 }
 
 .calculator-grid > button:hover {
     background-color: rgba(61, 60, 60, 0.9);
   }
-
-
 
 .output {
     grid-column: 1/ -1;
@@ -63,24 +71,6 @@
     font-size: 2.5rem;
   }  
 
-  :root {
-    --bg-color: #ffffff;
-    --font-color: #222;
-    --title-color: #0067e6;
-    --title-background: #fff;
-    --main-border: 1px solid rgba(255, 255, 255, 0.4);
-    --main-bg: rgba(255, 255, 255, 0.4);
-  }
-  
-  [data-theme="dark"] {
-    --bg-color:  linear-gradient(180deg, #000000e1, #0f0027);
-    --font-color: #efefef;
-    --title-color: #fec150;
-    --title-background: #222;
-    --main-border: 1px solid rgba(255, 255, 255, 0.2);
-    --main-bg: rgba(25, 25, 25, 0.4);
-  }
-  
   html,
   body {
     height: 100%;
@@ -88,9 +78,8 @@
   
   body {
     color: var(--font-color);
+    background-image: var(--bg-image);
     background-color: var(--bg-color);
-  
-    /* OTHER STYLING */
     margin: 0 2rem 0;
     font-family: sans-serif;
     font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
